feat: ユーザー作成時の店舗指定を実装。統計画面の表示編集